syntax = "proto3";

// message for examples

message ExampleDirectoryWriteFileRequest { string path = 1; }

message ExampleDirectoryWriteFileResponse {
  string path = 1;
  bytes body = 2;
}

service ExampleDirectory {
  rpc WriteFile(ExampleDirectoryWriteFileRequest)
      returns (ExampleDirectoryWriteFileResponse) {}
}

// common status

message CommonStatus {
  int32 status_code = 1;
  string message = 2;
}

// message for directory service

message AssignRequest { int32 replication_count = 1; }

message AssignResponse {
  string master = 1;
  repeated string slaves = 2;
  string file_id = 3;
}

message KeepaliveRequest {
  string location = 1;
  int64 status = 2;
}

message KeepaliveResponse {}

// rpc services

service Directory {
  rpc Assign(AssignRequest) returns (AssignResponse) {};
  rpc Keepalive(stream KeepaliveRequest) returns (stream KeepaliveResponse) {};
}