syntax = "proto3";

// common status

message CommonStatus {
    int32 status_code = 1;
    string message = 2;
  }
  
  // message for directory service
  
  message WriteFileRequest {
    string path = 1;
    int64 offset = 2;
    int64 length = 3;
    bytes data = 4;
  }
  
  message WriteFileResponse { CommonStatus status = 1; }
  
  message ReadFileRequest {
    string path = 1;
    int64 offset = 2;
    int64 length = 3;
  }
  
  message ReadFileResponse {
    CommonStatus status = 1;
    string path = 2;
    int64 offset = 3;
    int64 length = 4;
    bytes data = 5;
  }
  
  // rpc services
  
  service Store {
    rpc WriteFile(stream WriteFileRequest) returns (WriteFileResponse) {};
    rpc ReadFile(ReadFileRequest) returns (stream ReadFileResponse) {};
  }